[gd_scene load_steps=3 format=3 uid="uid://htpcm2myghw0"]

[ext_resource type="Script" path="res://scripts/ShopMenu.gd" id="1_4hse5"]
[ext_resource type="Texture2D" uid="uid://21dluakd26em" path="res://assets/base assets/dialogue_box.png" id="2_sd0q3"]

[node name="ShopMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4hse5")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 311.5
offset_top = 167.5
offset_right = 648.5
offset_bottom = 372.5
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_sd0q3")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Close" type="Button" parent="."]
offset_left = 592.0
offset_top = 176.0
offset_right = 642.0
offset_bottom = 207.0
text = "Close"

[node name="Purchase" type="Button" parent="."]
offset_left = 440.0
offset_top = 336.0
offset_right = 520.0
offset_bottom = 367.0
text = "Purchase"

[node name="Next" type="Button" parent="."]
offset_left = 560.0
offset_top = 216.0
offset_right = 584.0
offset_bottom = 247.0
text = ">"

[node name="Back" type="Button" parent="."]
offset_left = 376.0
offset_top = 216.0
offset_right = 400.0
offset_bottom = 247.0
text = "<"

[node name="Name" type="Label" parent="."]
offset_left = 432.0
offset_top = 192.0
offset_right = 528.0
offset_bottom = 216.0
text = "Cola Serum
		"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Des" type="Label" parent="."]
offset_left = 384.0
offset_top = 256.0
offset_right = 576.0
offset_bottom = 320.0
text = "This item allows you to run faster"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Close" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Purchase" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
